@@ -1,0 +1,12 @@
+a_name,b_name
+-------------------------------
+AFRICA,AMERICA
+AFRICA,ASIA
+AFRICA,EUROPE
+AFRICA,MIDDLE EAST
+AMERICA,ASIA
+AMERICA,EUROPE
+AMERICA,MIDDLE EAST
+ASIA,EUROPE
+ASIA,MIDDLE EAST
+EUROPE,MIDDLE EAST
