@@ -1,0 +1,7 @@
+r_regionkey,r_name,r_name
+-------------------------------
+0,AFRICA,AFRICA
+1,AMERICA,AMERICA
+2,ASIA,ASIA
+3,EUROPE,EUROPE
+4,MIDDLE EAST,MIDDLE EAST
